# playground

./: README.md  Upload.sh  runme.sh
pg/esp_learn/c6/simple_ota_example/: sdkconfig  sdkconfig.old
pg/esp_learn/c6/simple_ota_example/server_certs/: ca_cert.pem
pg/esp_learn/c6/weshare/ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/: sdkconfig
pg/esp_learn/c6/weshare/WaveShareC6lvglexample-main/ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/: sdkconfig  sdkconfig.old
pg/esp_learn/c6/weshare/WaveShareC6lvglexample-main/ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/: CMakeLists.txt  main.c
pg/esp_learn/c6/weshare/WaveShareC6lvglexample-main/ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LVGL_UI/C6example/: C6example_UI.c  C6example_UI.h
pg/esp_learn/c6/weshare/WaveShareC6lvglexample-main/ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LVGL_UI/NewYear/: NewYear_UI.c  NewYear_UI.h
pg/esp_learn/p4/wifi/fast_scan/: sdkconfig  sdkconfig.defaults  sdkconfig.old
pg/esp_learn/p4/wifi/fast_scan/softAP/: sdkconfig  sdkconfig.old
pg/esp_learn/p4/wifi/file_server/file_serving/: sdkconfig  sdkconfig.defaults  sdkconfig.old
pg/esp_learn/p4/wifi/file_server/file_serving/main/: idf_component.yml  main.c
pg/esp_learn/p4/wifi/ota/: chao.note
pg/esp_learn/p4/wifi/ota/native_ota_example/: sdkconfig  sdkconfig.old
pg/esp_learn/p4/wifi/ota/native_ota_example/main/: idf_component.yml
pg/esp_learn/p4/wifi/ota/simple_ota_example/: sdkconfig  sdkconfig.old
pg/esp_learn/p4/wifi/ota/simple_ota_example/main/: simple_ota_example.c
pg/esp_learn/p4/wifi/ota/simple_ota_example/test/: ca_cert.pem
pg/esp_learn/p4/wifi/ota/simple_ota_example_fullcode/: sdkconfig.defaults  sdkconfig.old
pg/esp_learn/p4/wifi/ota/simple_ota_example_fullcode/test/: ca_cert.pem
pg/esp_learn/p4/wifi/power_save/: sdkconfig  sdkconfig.defaults  sdkconfig.old
pg/esp_learn/p4/wifi/scan/: sdkconfig  sdkconfig.defaults
pg/esp_learn/p4/wifi/scan/main/: idf_component.yml  scan.c
pg/esp_learn/p4/wifi/station/10/: sdkconfig
pg/esp_learn/p4/wifi/station/12/station/: sdkconfig  sdkconfig.defaults  sdkconfig.old
pg/esp_learn/p4/wifi/station/12/station/main/: idf_component.yml
pg/lvgl_learn/lv_platformio/: platformio.ini
pg/lvgl_learn/lv_platformio/lvgl_raymond_ui/: CMakeLists.txt  ui.c  ui.h
pg/lvgl_learn/lv_platformio/lvgl_raymond_ui/components/: ui_button.c  ui_button.h  ui_footer.c  ui_footer.h  ui_keyboard.c  ui_keyboard.h  ui_label.c  ui_label.h  ui_list_element.c  ui_list_element.h  ui_roller.c  ui_roller.h  ui_slider.c  ui_slider.h  ui_spinbox.c  ui_spinbox.h  ui_switch.c  ui_switch.h  ui_title_bar.c  ui_title_bar.h
pg/lvgl_learn/lv_platformio/lvgl_raymond_ui/includes/lvgl/: lvgl.h  lvgl_private.h
pg/lvgl_learn/lv_platformio/lvgl_raymond_ui/screens/: ui_screen_boot.c  ui_screen_boot.h  ui_screen_curing.c  ui_screen_curing.h  ui_screen_door.c  ui_screen_door.h  ui_screen_drying.c  ui_screen_drying.h  ui_screen_error.c  ui_screen_error.h  ui_screen_finished.c  ui_screen_finished.h  ui_screen_heat_cool.c  ui_screen_heat_cool.h  ui_screen_home.c  ui_screen_home.h  ui_screen_pre_heat.c  ui_screen_pre_heat.h  ui_screen_settings.c  ui_screen_settings.h  ui_screen_wifi.c  ui_screen_wifi.h  ui_screens.h
pg/lvgl_learn/lv_platformio/src/: main.cpp
